# ALM_Autunomous

./: .gitignore  README.md  SETUP_CHECKLIST.md
ALM_auto_ws/src/alm_base_control/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_base_control/config/: base_control.yaml
ALM_auto_ws/src/alm_base_control/launch/: base_control.launch.py
ALM_auto_ws/src/alm_base_control/scripts/: command_manager.py
ALM_auto_ws/src/alm_bringup/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_bringup/config/: .gitkeep
ALM_auto_ws/src/alm_bringup/launch/: navigation.launch.py  robot.launch.py  slam.launch.py
ALM_auto_ws/src/alm_description/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_description/launch/: description.launch.py
ALM_auto_ws/src/alm_description/rviz/: alm.rviz
ALM_auto_ws/src/alm_description/urdf/: alm_robot.urdf.xacro
ALM_auto_ws/src/alm_mcu_interface/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_mcu_interface/config/: mcu_interface.yaml
ALM_auto_ws/src/alm_mcu_interface/docs/: uart_protocol.md
ALM_auto_ws/src/alm_mcu_interface/launch/: mcu_interface.launch.py
ALM_auto_ws/src/alm_mcu_interface/scripts/: mcu_bridge.py
ALM_auto_ws/src/alm_msgs/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_msgs/msg/: McuCommand.msg  McuState.msg
ALM_auto_ws/src/alm_navigation/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_navigation/config/: ekf.yaml  fastlio_mid360.yaml  fastlio_relocalization.yaml  nav2.yaml  sc_lio_sam.yaml  slam_toolbox.yaml
ALM_auto_ws/src/alm_navigation/launch/: ekf.launch.py  localization.launch.py  navigation.launch.py  slam.launch.py  slam_sc.launch.py
ALM_auto_ws/src/alm_navigation/maps/: .gitkeep  alm_map.pgm  alm_map.yaml
ALM_auto_ws/src/alm_navigation/rviz/: fastlio_mapping.rviz  localization.rviz
ALM_auto_ws/src/alm_navigation/scripts/: map_publisher.py  pcd2pgm.py  sc_build_db.py  sc_localizer.py  scan_context.py
ALM_auto_ws/src/alm_sensors/: CMakeLists.txt  package.xml
ALM_auto_ws/src/alm_sensors/config/: MID360_config.json  sensors.yaml
ALM_auto_ws/src/alm_sensors/launch/: imu.launch.py  lidar.launch.py  sensors.launch.py
ALM_auto_ws/src/alm_sensors/scripts/: add_time_field.py  ebimu_publisher.py  ebimu_publisher.sh  ebimu_subscriber.py  ebimu_subscriber.sh  imu_orientation.py  imu_publisher.py  imu_relay.py  livox_udp_imu.py  livox_udp_pointcloud2.py  pointcloud_to_scan.py
docs/: CHANGES.md  JETSON_SETUP.md  OPERATION_GUIDE.md  TODO.md
imu_control_tools/: README.md  disable_imu_magnetometer.py
