<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alm_bringup</name>
  <version>0.0.0</version>
  <description>Launch and runtime configuration entry points for the ALM autonomous robot.</description>
  <maintainer email="kdh1228@inha.edu">duhun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>alm_description</exec_depend>
  <exec_depend>alm_sensors</exec_depend>
  <exec_depend>alm_navigation</exec_depend>
  <exec_depend>alm_base_control</exec_depend>
  <exec_depend>alm_mcu_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
