<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alm_navigation</name>
  <version>0.0.0</version>
  <description>Navigation, SLAM, localization, and map configuration for the ALM autonomous robot.</description>
  <maintainer email="kdh1228@inha.edu">duhun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <!-- 3D 매핑(FAST-LIO2): fastlio_mapping 노드 + alm_sensors 의 add_time_field 어댑터 -->
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>icp_relocalization</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>alm_sensors</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
