<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alm_sensors</name>
  <version>0.0.0</version>
  <description>3D LiDAR and IMU driver bringup, configuration, and calibration assets for the ALM autonomous robot.</description>
  <maintainer email="kdh1228@inha.edu">duhun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <!-- 공식 Livox 드라이버 (별도 설치/빌드 필요): https://github.com/Livox-SDK/livox_ros_driver2 -->
  <exec_depend>livox_ros_driver2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
